update \coordinator macro to point to \director

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -160,7 +160,7 @@ Copyright \copyright\ \the\year\ \thanklessauthor
 %----------------------------------------------------------------------------------------
 
 \newcommand{\director}{Jeremy}
-\newcommand{\coordinator}{Paxton}
+\newcommand{\coordinator}{\director}
 \newcommand{\labmeetingtime}{Tuesdays at 12:00pm}
 
 \cleardoublepage
@@ -212,7 +212,7 @@ inconsistency!
   \href{mailto:contextualdynamics@gmail.com}{contextualdynamics@gmail.com}.
   \textbf{You are officially a lab member once you have completed
     all tasks in this manual and receipt of your signed and filled-out
-    signature page and checklist has been acknowledged by \director~or \coordinator.}}
+    signature page and checklist has been acknowledged by \director.}}
 \newthought{Why is it worth my time to read through the manual?}
 Aside from pursuing your own curiosity, a major reason that you've
 decided to join an academic research lab is probably because you want
@@ -798,7 +798,7 @@ meetings:
 
 \noindent
 \marginnote{\texttt{TASK:} Create (free) Google and GitHub
-  accounts.  Send your addresses and/or usernames to \coordinator~and \director~so that you can be added to the lab groups.  Also
+  accounts.  Send your addresses and/or usernames to \coordinator~so that you can be added to the lab groups.  Also
   send your preferred email address so that you can be added to the
   lab Slack account.}The very first thing you need to do is to get set
 up on the following platforms, which will enable you to interact with the
@@ -914,7 +914,7 @@ The general steps to starting a project are:
 
   \item Create a Slack channel or decide on existing channel
     appropriate for project use.
-\marginnote{\texttt{NOTE:} If you create a new Slack channel for your project, invite \director, \coordinator, and other team members to join.}
+\marginnote{\texttt{NOTE:} If you create a new Slack channel for your project, invite \director~and other team members to join.}
   \item Coordinate with \director~to set up a \href{https://get.slack.help/hc/en-us/articles/232289568-GitHub-for-Slack}{GitHub
       for Slack} integration between your project and channel by sending a link to the GitHub repo in the project's Slack channel with a note asking to set up a Slack integration.
    \item If your project involves testing human participants, verify
@@ -954,7 +954,7 @@ may choose to devote some of your time to a secondary project (with
 the understanding that you will always prioritize your primary
 project).  If you want to change which project is your primary
 project, or if you want to divide your time across multiple projects,
-you should coordinate this with \director, \coordinator, and your team
+you should coordinate this with \director~and your team
 members.
 
 
@@ -1059,11 +1059,11 @@ system (e.g.\ as determined by your project owner, project
 coordinator, or fellow team members), you may be asked to provide
 additional information (in a way that does not invade your privacy---and
  if you are worried that this policy is overly intrusive, please
-bring your concerns to \director~or \coordinator).  Here's the
+bring your concerns to \director).  Here's the
 official lab attendance policy:
 \begin{itemize}
 \item It is your responsibility to provide notice, well in advance, to anyone your absence will
-  affect (e.g. \director, \coordinator, people you're scheduled to
+  affect (e.g. \director, people you're scheduled to
   meet with, etc.).  The best way to do this is via email or Slack, along with adding your
   absence to the
   \hyperref[sec: scheduling]{out-of-lab
@@ -1140,7 +1140,7 @@ your compensation, please discuss them with \director.
 If you are experiencing an interpersonal issue with another lab member
 or community member and are having trouble resolving it on your own (or feel
 unsafe resolving it on your own), please seek out assistance from
-\director, \coordinator, your Project Owner, your Project Coordinator,
+\director, your Project Owner, your Project Coordinator,
 or one of the Dartmouth community resources described below as early
 as possible.
 
@@ -1226,7 +1226,7 @@ repository includes
  should be reported immediately.
 
 \subsection{Repository of shared lab papers}
-Our lab maintains a Dropbox repository of PDFs for internal use by lab members and affiliates. Contact \director~or \coordinator~for a link (not to be shared publicly).
+Our lab maintains a Dropbox repository of PDFs for internal use by lab members and affiliates. Contact \director~for a link (not to be shared publicly).
 
  \subsection{Travel policy}
  \marginnote{\texttt{NOTE:} To obtain funding for a scientific
@@ -1314,7 +1314,7 @@ lab.  \coordinator~can help facilitate these payments.
  well in advance of the start of the term you wish to run
  participants.
 
-\marginnote{\texttt{NOTE:}In some cases, external funding sources may be available to cover cash subject payments (e.g. \href{https://students.dartmouth.edu/ugar/research/programs/honors-thesis-grant}{undergraduate Honors Thesis Grants} or \href{http://neukom.dartmouth.edu/programs/neukom-scholars.html}{Neukom Scholars grants}). Coordinate with \director~or \coordinator~to determine whether alternative funding sources are available for your project.}
+\marginnote{\texttt{NOTE:}In some cases, external funding sources may be available to cover cash subject payments (e.g. \href{https://students.dartmouth.edu/ugar/research/programs/honors-thesis-grant}{undergraduate Honors Thesis Grants} or \href{http://neukom.dartmouth.edu/programs/neukom-scholars.html}{Neukom Scholars grants}). Coordinate with \director~to determine whether alternative funding sources are available for your project.}
  Cash subject payments for lab research projects will in most cases be fully covered by
  the lab (see the \texttt{NOTE}).  Subject payment guidelines are generally found in the IRB
  approval documentation relevant to your project.  For Mechanical Turk
@@ -1448,7 +1448,7 @@ Experimental \marginnote{\texttt{NOTE:} prior to running any non-lab-member
   specifically listed on the associated protocol.} protocols and IRB approval forms are maintained and
 coordinated through
 \href{https://rapport.dartmouth.edu/}{RAPPORT}.  Typically this system
-is accessed directly by \director~or \coordinator, but if you feel you
+is accessed directly by \director, but if you feel you
 need access to RAPPORT then let \director~know.
 
  \newthought{List of active protocols}
@@ -1664,7 +1664,7 @@ need access to RAPPORT then let \director~know.
     website.  Alternatively, I have coordinated with \coordinator~to indicate my
     preference to not be included on the lab website.
   \item I agree to regularly attend lab meetings (unless I have a course
-    conflict and have informed \director~or \coordinator).
+    conflict and have informed \director).
   \item I agree to set up a beginning-of-term or end-of-term meeting
     with \director~at least once per term.
   \item I have read \href{https://www.sciencemag.org/careers/2018/11/what-can-we-learn-dartmouth}{Leah Somerville's commentary} on speaking
