update outdated discovery link

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1208,7 +1208,7 @@ shared with the \href{http://www.cosanlab.com/}{COSAN Lab} and the
 When you link your Discovery account with the lab, you will
 automatically have access to those additional computing resources.  We
 use Discovery for our most computationally intensive work.
-\href{https://trello-attachments.s3.amazonaws.com/56f548a3cb4847c27668e504/56f7ff07085632013a40545a/44c1921381d6193eca67e9c875a32960/discovery_cluster_tutorial.pdf}{This
+\href{https://rc.dartmouth.edu/index.php/discovery-overview/accessing-the-cluster}{This
   link} contains instructions for creating an account and accessing 	% potentially add link to cluster tutorial when completed
 the Discovery cluster.  Our suggested workflow is to do non-intensive
 computations and analyses on your personal desktop or laptop computer,
