--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1553,6 +1553,7 @@ need access to RAPPORT then let \director~know.
 \item Natalie Schreder (2021 -- )
 \item Swestha Jain (2021 -- )
 \item Will McCall (2021 -- )
+\item Daniel Carstensen (2021 -- )
 \end{list}
 \end{multicols}
 
