--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1516,20 +1516,15 @@ need access to RAPPORT then let \director~know.
 \item Lucy Owen (2016 -- )
 \item Kirsten Ziman (2017 -- )
 \item Caroline Lee (2019 -- )
+\item Paxton Fitzpatrick (2021 -- )
+\item Xinming Xu (2021 -- )
 \end{list}
 \end{multicols}
-
-
-\newthought{Lab Manager}
-\bigskip
-
-\enskip Paxton Fitzpatrick (2018 -- )
 
 
 \newthought{Research Assistants}
 \begin{multicols}{2}\raggedcolumns
 \begin{list}{\quad}{}
-\item Xinming Xu (2019 -- )
 \item Mark Taylor (2021 -- )
 \end{list}
 \end{multicols}
@@ -1570,8 +1565,10 @@ need access to RAPPORT then let \director~know.
 \newthought{Lab Managers}
 \begin{multicols}{2}\raggedcolumns
 \begin{list}{\quad}{}
-\item Emily Whitaker (2017 -- 2018)
 \item Kirsten Ziman (2016 -- 2017)
+\item Emily Whitaker (2017 -- 2018)
+\item Paxton Fitzpatrick (2018 -- 2021)
+
 \end{list}
 \end{multicols}
 
@@ -1581,6 +1578,7 @@ need access to RAPPORT then let \director~know.
 \begin{list}{\quad}{}
 \item Max Bluestone (2018 -- 2019)
 \item Maddy Lee (2020 -- 2021)
+\item Xinming Xu (2019 -- 2021)
 \end{list}
 \end{multicols}
 
