update lab manual with name

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1627,6 +1627,7 @@ need access to RAPPORT then let \director~know.
 \item Daniel Ha (2021)
 \item Shane Park (2019 -- 2021)
 \item Tehut Biru (2020 -- 2021)
+\item Ansh Patel (2021)
 
 \end{list}
 \end{multicols}
