update name into correct section

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1549,6 +1549,7 @@ need access to RAPPORT then let \director~know.
 \item Swestha Jain (2021 -- )
 \item Will McCall (2021 -- )
 \item Daniel Carstensen (2021 -- )
+\item Ansh Patel (2021 -- )
 \end{list}
 \end{multicols}
 
@@ -1627,7 +1628,6 @@ need access to RAPPORT then let \director~know.
 \item Daniel Ha (2021)
 \item Shane Park (2019 -- 2021)
 \item Tehut Biru (2020 -- 2021)
-\item Ansh Patel (2021)
 
 \end{list}
 \end{multicols}
