--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1642,6 +1642,7 @@ feel you need access to RAPPORT then let \director~know.
 \item Will McCall (2021 -- )
 \item Daniel Carstensen (2021 -- )
 \item Ansh Patel (2021 -- )
+\item Anna Mikhailova (2021 -- )
 \end{list}
 \end{multicols}
 
