corrected lab meeting time

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -161,7 +161,7 @@ Copyright \copyright\ \the\year\ \thanklessauthor
 
 \newcommand{\director}{Jeremy}
 \newcommand{\coordinator}{\director}
-\newcommand{\labmeetingtime}{Tuesdays at noon}
+\newcommand{\labmeetingtime}{Tuesdays at 12:30pm}
 
 \cleardoublepage
 \chapter{Introduction}\label{ch:intro} % Adding an asterisk leaves out this chapter from the table of contents
