added a reference to the new slack onboarding workflow, updated checklist accordingly

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -827,14 +827,12 @@ meetings:
 \newthought{Getting started in the lab}
 
 \noindent
-The very first thing you need to do is to get set
-up on the following platforms, which will enable you to interact with the
-rest of the lab, download and use the lab's software packages, and
-accomplish various necessary administrative tasks: \marginnote{\texttt{TASK:} Create (free) Google and GitHub
-  accounts.  Send your GMail address and GitHub username to \coordinator~so
-  that you can be added to the lab groups.  Also initiate a request to
-join our slack workspace via
-\href{https://dartmouth.enterprise.slack.com/workspace/T0W0TEQNA}{this
+The very first thing you need to do is to get set up on the following
+platforms, which will enable you to interact with the rest of the lab,
+download and use the lab's software packages, and accomplish various
+necessary administrative tasks: \marginnote{\texttt{TASK:} Create
+  (free) Google and GitHub accounts.  Also initiate a request to join our slack workspace via
+  \href{https://dartmouth.enterprise.slack.com/workspace/T0W0TEQNA}{this
     link}.}
 \begin{enumerate}
 \item \href{https://context-lab.slack.com}{\textbf{Slack.}}  This is where
@@ -1016,9 +1014,10 @@ you should coordinate this with \director~and your team members.
 \newthought{Scheduling}
 \label{sec: scheduling}
 
-\noindent\marginnote{\texttt{TASK:} Email \coordinator~to request
-  invites to each of the calendars below---the download links in the
-  lab manual are read-only!}Our lab's scheduling practices and
+\noindent\marginnote{\texttt{TASK:} Send a Slack direct message to \coordinator~to request
+  invites to each of the calendars below for which you require write access---the links in the
+  lab manual are read-only!  In your request, please specify which
+  calendars you would like write access to.}Our lab's scheduling practices and
 policies are intended to facilitate lab member interactions between
 ourselves, our collaborators, and our experimental participants.
 There are three basic tools the lab uses to organize and schedule
@@ -1029,22 +1028,26 @@ events:
   \item We use the
     \href{https://calendar.google.com/calendar/ical/5ta50cfv4uih0a0k8m2di9dhjo\%40group.calendar.google.com/private-ff1338ddce84ac37d5ab682cd94e7f69/basic.ics}{main
       lab calendar} to keep track of lab-wide events including lab
-    meetings, conferences, and activities.
+    meetings, conferences, and activities.  Note: write access is
+    granted only to senior lab members-- i.e., lab staff and graduate students.
   \item We use the
     \href{https://calendar.google.com/calendar/ical/dgcv8l8a8s10hfg2s5h0qec0q0\%40group.calendar.google.com/private-4810aed94f818d5748045447ab46c62d/basic.ics}{CDL
       resources calendar} to coordinate the use of shared rooms and
     equipment, such as testing rooms, our EEG systems, eye-tracker,
-    hospital equipment, software licenses, etc.
+    hospital equipment, software licenses, etc.  Request write access
+    if you may require use of lab equipment.
   \item We use the
     \href{https://calendar.google.com/calendar/ical/h1j06dohcg7v1g2o5tkb7ijhvs\%40group.calendar.google.com/private-239aaf8b4dc60480c90e8d7fc353e229/basic.ics}{out-of-lab
       calendar} to keep track of known absences (e.g. illness, travel,
     holidays, etc.).  \marginnote{\texttt{TASK:} If you are a graduate
       or undergraduate student, please add your schedule to the CDL
-      class schedule calendar at the beginning of each term.}
+      class schedule calendar at the beginning of each term.}  All
+    full-time lab members should request write access.
   \item We use the
     \href{https://calendar.google.com/calendar/ical/v2selomg4o6aobua7g922aamqc\%40group.calendar.google.com/private-4377dd542d0d1f6226c9657955b778c5/basic.ics}{CDL
       class schedule calendar} to keep track of course schedules of
-    grad students and undergraduates.
+    grad students and undergraduates. All student lab members should request
+    write access.
   \item We use the \href{https://calendar.google.com/calendar/ical/j6noo2tqahpsoq9na1h16paf3s\%40group.calendar.google.com/private-c3d75bea1ab4605947353d159d3dcd05/basic.ics}{DHMC meetings
   calendar} to keep track of important events and meetings at DHMC.
   \item We use the \href{https://calendar.google.com/calendar/ical/mp1bujb39ud5bgmmnq9r8dbiuk\%40group.calendar.google.com/private-8a3c6919c30e7b118ab3a4fd23aad6cf/basic.ics}{PBS department events calendar} to keep track of talks and events happening in the department.
@@ -1605,7 +1608,6 @@ feel you need access to RAPPORT then let \director~know.
 \newthought{Graduate Students}
 \begin{multicols}{2}\raggedcolumns
 \begin{list}{\quad}{}
-\item Lucy Owen (2016 -- )
 \item Kirsten Ziman (2017 -- )
 \item Caroline Lee (2019 -- )
 \item Paxton Fitzpatrick (2021 -- )
@@ -1654,6 +1656,12 @@ feel you need access to RAPPORT then let \director~know.
 \end{list}
 \end{multicols}
 
+\newthought{Graduate Students}
+\begin{multicols}{2}\raggedcolumns
+  \begin{list}{\quad}{}
+    \item Lucy Owen (2016 -- 2021)
+  \end{list}
+  \end{multicols}
 
 \newthought{Lab Managers}
 \begin{multicols}{2}\raggedcolumns
@@ -1727,8 +1735,17 @@ feel you need access to RAPPORT then let \director~know.
 
 
 \chapter{Checklist and signature page}
+
    By signing below, I certify that I have completed the following tasks:
-\begin{todolist}
+   \begin{todolist}
+     \item I have joined the lab's Slack account and worked through the
+    orientation workflow to share my accounts and information with \director.
+    \item I agree to check Slack
+    regularly (at \textit{least} once per normal business day, excluding days I
+    mark on the out-of-lab calendar) and to respond to messages and
+    requests in a timely manner (within a few hours during normal
+    business hours, or early the next business day if messages are
+    received after hours).
   \item I have created a GitHub account and have been added to the appropriate lab
     GitHub group(s).  If I am unfamiliar with Git, I have gone through
     the GitHub tutorials.
@@ -1737,14 +1754,14 @@ feel you need access to RAPPORT then let \director~know.
 \item I have submitted a pull request to the
   \href{https://github.com/ContextLab/lab-manual}{GitHub repository}
   that adds my name to the \hyperref[sec:curr_members]{lab members}
-  section, along with any other updates I think would be helpful.
+  section, along with any other updates I think would be helpful.  I
+  have also recompiled the PDF of the lab manual by running
+  \texttt{pdflatex} \textbf{twice}, and have ensured that (a) the PDF compiled
+  without errors, and (b) the table of contents was generated correctly.
   \item I have access to the following lab calendars:
     Contextual Dynamics Lab, Out of lab, CDL Resources, CDL class
     schedule (if applicable), DHMC Meetings (if
     applicable), and PBS department events.
-  \item I have joined the lab's Slack account and agree to check it
-    regularly (at least once per normal business day, excluding days I
-    mark on the out-of-lab calendar).
   \item I have been added to the lab's 1password account if I am a
     senior lab member, or I have not been added because I am a junior
     lab member.
@@ -1753,10 +1770,14 @@ feel you need access to RAPPORT then let \director~know.
   \item I am an unpaid or salaried employee, or I am an hourly
     employee and have gotten myself set up on Kronos to track my paid
     hours.
+    \item If I am a paid employee (including graduate students), or if
+      I would like to be paid, I agree to regularly seek out and
+      coordinate with \director~about relevant funding opportunities
+      that could help support me and/or my research.
   \item I have submitted a photograph (of myself, or a representative
     scene or object) along with a brief (2-3 sentence), professionally
     worded biography, to be included on the lab website.
-    Alternatively, I have coordinated with \coordinator~to indicate my
+    Alternatively, I indicated (via Slack message to \coordinator) my
     preference to not be included on the lab website.
   \item I agree to regularly attend lab meetings (unless I have a
     course conflict and have informed \director).
@@ -1791,7 +1812,7 @@ feel you need access to RAPPORT then let \director~know.
     \href{mailto:contextualdynamics@gmail.com}{contextualdynamics@gmail.com}.
 \end{todolist}
 
-\vspace{1in}
+\vspace{0.5in}
 \begin{tabular}{@{}p{3in}p{1in}@{}}
 \hrulefill & \hrulefill \\
 Signature & Date\\
