added instructions for initiating conference funding requests

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1315,7 +1315,10 @@ publicly).
    abstract in order for the lab to cover your expenses.  (Your
    expenses will be covered up the agreed-upon amount, at which point
    you are responsible for making your travel plans accordingly,
-   submitting receipts, etc.)}A major component of doing scientific
+   submitting receipts, etc.)  To initiate a request for travel
+   funding, join the \texttt{\#receipts} channel on Slack and use the
+   workflow (lightning bolt in the lower left) menu to start a
+   ``Conference \$ request''.}A major component of doing scientific
  research is communicating with other scientists.  The Contextual
  Dynamics Lab regularly presents at several international scientific
  conferences.  If you are presenting your work from the lab (i.e., you
