Update lab_manual.tex with Thomas Corrado's Name

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1647,6 +1647,7 @@ feel you need access to RAPPORT then let \director~know.
 \item Will McCall (2021 -- )
 \item Daniel Carstensen (2021 -- )
 \item Ansh Patel (2021 -- )
+\item Thomas Corrado (2021 --)
 \end{list}
 \end{multicols}
 
