updated onboarding workflow, updated current/alumni lists, added some new notes

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -332,7 +332,11 @@ efficiency, we need to succeed on three fronts:
   sociological) and technical issues.  We also use a variety of
   software packages to synchronize and facilitate communication within
   our lab and between our lab and the broader scientific community.
-\item \textbf{Resource allocation.}  Our lab resources (e.g.\
+\item \textbf{Resource allocation.}  \marginnote{\texttt{NOTE:}
+    resources, links, and discussions related to grants and other
+    funding opportunities may be found in the \#grants Slack channel.
+  All senior lab personel (and any interested junior personel) should join this channel to participate in
+  discussions pertaining to lab resources.} Our lab resources (e.g.\
   equipment, time, money, attention) are finite.  We want to foster an
   environment where lab resources are used as efficiently as possible
   to achieve our collective goals.  We also want to foster
@@ -1605,14 +1609,13 @@ feel you need access to RAPPORT then let \director~know.
 \newthought{PI}
 \bigskip
 
-\enskip Jeremy R. Manning
+\enskip Jeremy R. Manning (2015 -- )
 
 
 \newthought{Graduate Students}
 \begin{multicols}{2}\raggedcolumns
 \begin{list}{\quad}{}
 \item Kirsten Ziman (2017 -- )
-\item Caroline Lee (2019 -- )
 \item Paxton Fitzpatrick (2021 -- )
 \item Xinming Xu (2021 -- )
 \end{list}
@@ -1662,7 +1665,8 @@ feel you need access to RAPPORT then let \director~know.
 \newthought{Graduate Students}
 \begin{multicols}{2}\raggedcolumns
   \begin{list}{\quad}{}
-    \item Lucy Owen (2016 -- 2021)
+  \item Lucy Owen (2016 -- 2021)
+  \item Caroline Lee (2019 -- 2021)
   \end{list}
   \end{multicols}
 
@@ -1742,7 +1746,10 @@ feel you need access to RAPPORT then let \director~know.
    By signing below, I certify that I have completed the following tasks:
    \begin{todolist}
      \item I have joined the lab's Slack account and worked through the
-    orientation workflow to share my accounts and information with \director.
+    orientation workflow to share my accounts and information with
+    \director.  (Click the lightning bolt button in the lower left of
+    the \#general channel and select `Join the lab!' to start the
+    onboarding process.)
     \item I agree to check Slack
     regularly (at \textit{least} once per normal business day, excluding days I
     mark on the out-of-lab calendar) and to respond to messages and
@@ -1815,7 +1822,7 @@ feel you need access to RAPPORT then let \director~know.
     \href{mailto:contextualdynamics@gmail.com}{contextualdynamics@gmail.com}.
 \end{todolist}
 
-\vspace{0.5in}
+\vspace{0.25in}
 \begin{tabular}{@{}p{3in}p{1in}@{}}
 \hrulefill & \hrulefill \\
 Signature & Date\\
