added names and fixed typos

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -916,7 +916,7 @@ the module, you will need to:
   you also need to complete the biomedical module, you will be able to
   add it after completing the social/behavioral module.
 \item There are 16 required modules that need to be
-  completed. Read/watch the the material and complete the quiz at the
+  completed. Read/watch the material and complete the quiz at the
   end of each module. You will need to achieve a score of at least an
   80\% to pass. Quizzes may be reviewed and retaken.
 \end{enumerate}
@@ -1436,7 +1436,7 @@ them.
   research equipment, etc.) \coordinator~or the senior lab member
   actively using the equipment should be your first-sought resource.
 
-\item For issues related to the the Discovery computing cluster,
+\item For issues related to the Discovery computing cluster,
   contact \href{mailto:John.P.Hudson@Dartmouth.edu}{John Hudson}.
 
 \item For other general Dartmouth-specific IT questions or issues,
@@ -1650,6 +1650,8 @@ feel you need access to RAPPORT then let \director~know.
 \item Will McCall (2021 -- )
 \item Daniel Carstensen (2021 -- )
 \item Ansh Patel (2021 -- )
+\item Anna Mikhailova (2021 --)
+\item Thomas Corrado (2021 --)
 \end{list}
 \end{multicols}
 
