clarify main lab calendar name
clarified that the main lab calendar is also known as Contextual Dyanmics Lab

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1031,7 +1031,8 @@ events:
   \begin{itemize}
   \item We use the
     \href{https://calendar.google.com/calendar/ical/5ta50cfv4uih0a0k8m2di9dhjo\%40group.calendar.google.com/private-ff1338ddce84ac37d5ab682cd94e7f69/basic.ics}{main
-      lab calendar} to keep track of lab-wide events including lab
+      lab calendar} — also known as "Contextual Dynamics Lab" —
+      to keep track of lab-wide events including lab
     meetings, conferences, and activities.  Note: write access is
     granted only to senior lab members-- i.e., lab staff and graduate students.
   \item We use the
