--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1065,7 +1065,7 @@ events:
 \item Physical address (where the event will take place)
 \item A brief description of the event and/or other relevant
   information
-\item Attach any relevant documents via Google Docs
+\Checkmark Attach any relevant documents via Google Docs
 \end{itemize}
 \end{itemize}
 \item \href{http://www.doodle.com}{Doodle},
