--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1746,23 +1746,23 @@ feel you need access to RAPPORT then let \director~know.
 
    By signing below, I certify that I have completed the following tasks:
    \begin{todolist}
-     \item I have joined the lab's Slack account and worked through the
+     \item \checkmark I have joined the lab's Slack account and worked through the
     orientation workflow to share my accounts and information with
     \director.  (Click the lightning bolt button in the lower left of
     the \#general channel and select `Join the lab!' to start the
     onboarding process.)
-    \item I agree to check Slack
+    \item \checkmark I agree to check Slack
     regularly (at \textit{least} once per normal business day, excluding days I
     mark on the out-of-lab calendar) and to respond to messages and
     requests in a timely manner (within a few hours during normal
     business hours, or early the next business day if messages are
     received after hours).
-  \item I have created a GitHub account and have been added to the appropriate lab
+  \item \checkmark I have created a GitHub account and have been added to the appropriate lab
     GitHub group(s).  If I am unfamiliar with Git, I have gone through
     the GitHub tutorials.
   \item I am proficient in \LaTeX, allowing me to edit and understand
   this lab manual's source code.
-\item I have submitted a pull request to the
+\item \checkmark I have submitted a pull request to the
   \href{https://github.com/ContextLab/lab-manual}{GitHub repository}
   that adds my name to the \hyperref[sec:curr_members]{lab members}
   section, along with any other updates I think would be helpful.  I
@@ -1773,51 +1773,51 @@ feel you need access to RAPPORT then let \director~know.
     Contextual Dynamics Lab, Out of lab, CDL Resources, CDL class
     schedule (if applicable), DHMC Meetings (if
     applicable), and PBS department events.
-  \item I have been added to the lab's 1password account if I am a
+  \item \checkmark I have been added to the lab's 1password account if I am a
     senior lab member, or I have not been added because I am a junior
     lab member.
-  \item I have completed the required CITI program module(s) and have
+  \item \checkmark I have completed the required CITI program module(s) and have
     sent my Completion Certificate(s) to \coordinator.
-  \item I am an unpaid or salaried employee, or I am an hourly
+  \item \checkmark I am an unpaid or salaried employee, or I am an hourly
     employee and have gotten myself set up on Kronos to track my paid
     hours.
-    \item If I am a paid employee (including graduate students), or if
+    \item \checkmark If I am a paid employee (including graduate students), or if
       I would like to be paid, I agree to regularly seek out and
       coordinate with \director~about relevant funding opportunities
       that could help support me and/or my research.
-  \item I have submitted a photograph (of myself, or a representative
+  \item \checkmark I have submitted a photograph (of myself, or a representative
     scene or object) along with a brief (2-3 sentence), professionally
     worded biography, to be included on the lab website.
     Alternatively, I indicated (via Slack message to \coordinator) my
     preference to not be included on the lab website.
-  \item I agree to regularly attend lab meetings (unless I have a
+  \item \checkmark I agree to regularly attend lab meetings (unless I have a
     course conflict and have informed \director).
-  \item I agree to set up a beginning-of-term or end-of-term meeting
+  \item \checkmark I agree to set up a beginning-of-term or end-of-term meeting
     with \director~at least once per term.
-    \item I agree to send \director~regular updates regarding my
+    \item \checkmark I agree to send \director~regular updates regarding my
       progress and work, including weekly snippets, meetings, Slack
       discussions, and/or GitHub updates.
-      \item If/when I decide to end my affiliation with the lab, I
+      \item \checkmark If/when I decide to end my affiliation with the lab, I
         will notify \director~and any other project members that may
         be affected by my departure.  I will also coordinate with
         \director~and other relevant lab members to facilitate a smooth
         transfer of your project-related roles and responsibilities to
         other lab members.  This includes a discussion about potential
         authorship on future publications related to the work.
-  \item I have read
+  \item \checkmark I have read
     \href{https://www.sciencemag.org/careers/2018/11/what-can-we-learn-dartmouth}{Leah
       Somerville's commentary} on speaking out in toxic or abusive
     environments.
-  \item I have reviewed the
+  \item \checkmark I have reviewed the
     \href{https://oir.nih.gov/sites/default/files/uploads/sourcebook/documents/ethical_conduct/guidelines-authorship_contributions.pdf}{NIH
       guidelines for authorship}.
-  \item I agree to abide by the lab's bill of rights and
+  \item \checkmark I agree to abide by the lab's bill of rights and
     responsibilities, and to follow official lab practices and
     policies.
-  \item I have carefully read through the entire lab manual, and I
+  \item \checkmark I have carefully read through the entire lab manual, and I
     have checked off all of the above items to indicate that I have
     carried out the indicated tasks.
-  \item I will send a digital copy (PDF) of the final two pages of
+  \item \checkmark I will send a digital copy (PDF) of the final two pages of
     this manual, including checked-off list items, my digital
     signature, and today's date, to
     \href{mailto:contextualdynamics@gmail.com}{contextualdynamics@gmail.com}.
