--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1657,6 +1657,7 @@ feel you need access to RAPPORT then let \director~know.
 \item Goutham Veeramachaneni (2022 -- )
 \item Zachary Somma (2022 -- )
 \item Dawson Haddox (2022 -- )
+\item Molly McQuoid (2022 -- )
 \end{list}
 \end{multicols}
 
