--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1665,6 +1665,7 @@ feel you need access to RAPPORT then let \director~know.
 \item Yue Zhuo (2023 -- )
 \item Francisca O. Fadairo (2023 -- )
 \item Ameer Talha Yasser (2023 -- )
+\item Maura F. Hough (2023 -- )
 
 \end{list}
 \end{multicols}
