--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1666,6 +1666,7 @@ feel you need access to RAPPORT then let \director~know.
 \item Francisca O. Fadairo (2023 -- )
 \item Ameer Talha Yasser (2023 -- )
 \item Maura F. Hough (2023 -- )
+\item Aaryan Agrawal (2023 -- )
 
 \end{list}
 \end{multicols}
