--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -736,7 +736,7 @@ are not normally co-authors.
 
 \newthought{Meetings}
 
-Because our lab has largely been operating in a ``hybrid'' mode of work (i.e.,
+\noindent Because our lab has largely been operating in a ``hybrid'' mode of work (i.e.,
 partially remote and partially in-person), our meeting schedule and
 requirements have changed from prior years:
 \begin{itemize}
@@ -858,7 +858,7 @@ necessary administrative tasks: \marginnote{\texttt{TASK:} Create
     1Password invite from \director.} This platform is used by senior
   lab members to manage secure notes and passwords (e.g.\ shared
   software licenses, card numbers and chart strings, etc.).
-\item 
+
 \end{enumerate}
 
 Once you've created those accounts, you can ask any questions through
@@ -1164,6 +1164,7 @@ events:
 
 \newthought{Compensation and benefits}
 
+\noindent
 If you are a non-student full-time on-campus employee, it's likely
 that you're eligible for Dartmouth benefits, such as medical
 insurance, dental insurance, life insurance, etc.  You can read more
@@ -1212,7 +1213,7 @@ questions, or concerns about your compensation, please discuss them with
 \director.
 
 \newthought{Interpersonal issues}
-
+\noindent
 If you are experiencing an interpersonal issue with another lab member
 or community member and are having trouble resolving it on your own
 (or feel unsafe resolving it on your own), please seek out assistance
@@ -1590,7 +1591,8 @@ feel you need access to RAPPORT then let \director~know.
    \end{enumerate}
 
    \newthought{Testing procedure}
-
+   
+\noindent
    When you run an experimental participant, you must have them sign a
    consent form.  After each day of testing (or more frequently), you
    should give all signed consent forms to \coordinator.  Consent
