Added my name to the lab manual

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1756,6 +1756,7 @@ feel you need access to RAPPORT then let \director~know.
 \item Shane Park (2019 -- 2021)
 \item Tehut Biru (2020 -- 2021)
 \item Molly McQuoid (2022)
+\item Grady Redding (2023)
 
 \end{list}
 \end{multicols}
