Fix bibliography issue from recompile

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1940,8 +1940,8 @@ Signature & Date\\
 %	BIBLIOGRAPHY
 %----------------------------------------------------------------------------------------
 
-\bibliography{bibliography} % Use the bibliography.bib file for the bibliography
-\bibliographystyle{plainnat} % Use the plainnat style of referencing
+%\bibliography{bibliography} % Use the bibliography.bib file for the bibliography
+%\bibliographystyle{plainnat} % Use the plainnat style of referencing
 
 %----------------------------------------------------------------------------------------
 
