--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1669,6 +1669,7 @@ feel you need access to RAPPORT then let \director~know.
 \item Ameer Talha Yasser (2023 -- )
 \item Maura F. Hough (2023 -- )
 \item Aaryan Agrawal (2023 -- )
+\item Grady Redding (2023 -- )
 
 \end{list}
 \end{multicols}
@@ -1756,7 +1757,6 @@ feel you need access to RAPPORT then let \director~know.
 \item Shane Park (2019 -- 2021)
 \item Tehut Biru (2020 -- 2021)
 \item Molly McQuoid (2022)
-\item Grady Redding (2023)
 
 \end{list}
 \end{multicols}
