--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1670,6 +1670,7 @@ feel you need access to RAPPORT then let \director~know.
 \item Maura F. Hough (2023 -- )
 \item Aaryan Agrawal (2023 -- )
 \item Grady Redding (2023 -- )
+\item Sarah Parigela (2023 -- )
 
 \end{list}
 \end{multicols}
