added sarah p and dj m, updated status of lots of people who have graduated

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1614,65 +1614,40 @@ feel you need access to RAPPORT then let \director~know.
 
 \enskip Jeremy R. Manning (2015 -- )
 
-
 \newthought{Graduate Students}
 \begin{multicols}{2}\raggedcolumns
 \begin{list}{\quad}{}
-\item Kirsten Ziman (2017 -- )
 \item Paxton Fitzpatrick (2021 -- )
 \item Xinming Xu (2021 -- )
 \end{list}
 \end{multicols}
 
 
-\newthought{Research Assistants}
-\begin{multicols}{2}\raggedcolumns
-\begin{list}{\quad}{}
-\item Mark Taylor (2021 -- )
-\end{list}
-\end{multicols}
+% \newthought{Research Assistants}
+% \begin{multicols}{2}\raggedcolumns
+% \begin{list}{\quad}{}
+
+% \end{list}
+% \end{multicols}
 
 
 \newthought{Undergraduate RAs}
 \begin{multicols}{2}\raggedcolumns
 \begin{list}{\quad}{}
-\item Tudor Muntianu (2019 -- )
-\item Chelsea Uddenberg (2020 -- )
-\item Greg Han (2020 -- )
-\item Esme Chen (2020 -- )
-\item Chris Long (2020 -- )
-\item Ethan Adner (2020 -- )
-\item Chris Jun (2020 -- )
-\item Chris Suh (2020 -- )
-\item Tyler Chen (2020 -- )
-\item Darren Gu (2020 -- )
-\item Aidan Adams (2021 -- )
-\item Damini Kohli (2021 -- )
-\item Natalie Schreder (2021 -- )
-\item Swestha Jain (2021 -- )
-\item Will McCall (2021 -- )
 \item Daniel Carstensen (2021 -- )
 \item Ansh Patel (2021 -- )
-\item Anna Mikhailova (2021 --)
-\item Thomas Corrado (2021 --)
-\item Brian Chiang (2021 -- )
-\item Kevin Cao (2022 -- )
-\item Goutham Veeramachaneni (2022 -- )
-\item Zachary Somma (2022 -- )
-\item Dawson Haddox (2022 -- )
-\item Alexander Marcoux (2022 -- )
-\item Jessna Brar (2022 -- )
-\item Wenhua Liang (2022 -- )
 \item Megan Liu (2023 -- )
 \item Yue Zhuo (2023 -- )
-\item Francisca O. Fadairo (2023 -- )
-\item Ameer Talha Yasser (2023 -- )
 \item Maura F. Hough (2023 -- )
 \item Aaryan Agrawal (2023 -- )
 \item Grady Redding (2023 -- )
+\item DJ Matusz (2023 -- )
+\item Sarah Parigela (2023 -- )
 
 \end{list}
 \end{multicols}
+
+\newpage
 
 \subsection{Lab alumni}
 \newthought{Postdoctoral Researchers}
@@ -1688,6 +1663,7 @@ feel you need access to RAPPORT then let \director~know.
   \begin{list}{\quad}{}
   \item Lucy Owen (2016 -- 2021)
   \item Caroline Lee (2019 -- 2021)
+  \item Kirsten Ziman (2017 -- 2021)
   \end{list}
   \end{multicols}
 
@@ -1756,8 +1732,35 @@ feel you need access to RAPPORT then let \director~know.
 \item Daniel Ha (2021)
 \item Shane Park (2019 -- 2021)
 \item Tehut Biru (2020 -- 2021)
+\item Tudor Muntianu (2019 -- 2021)
+\item Chelsea Uddenberg (2020 -- 2021)
+\item Greg Han (2020 -- 2021)
+\item Esme Chen (2020 -- 2021)
+\item Chris Long (2020 -- 2021)
+\item Ethan Adner (2020 -- 2021)
+\item Chris Jun (2020 -- 2021)
+\item Chris Suh (2020 -- 2021)
+\item Tyler Chen (2020 -- 2021)
+\item Darren Gu (2020 -- 2021)
+\item Aidan Adams (2021)
+\item Damini Kohli (2021)
+\item Natalie Schreder (2021)
+\item Swestha Jain (2021)
+\item Will McCall (2021)
+\item Anna Mikhailova (2021)
+\item Thomas Corrado (2021)
+\item Brian Chiang (2021)
+\item Kevin Cao (2022)
+\item Goutham Veeramachaneni (2022)
+\item Zachary Somma (2022)
+\item Dawson Haddox (2022)
+\item Alexander Marcoux (2022)
+\item Jessna Brar (2022)
+\item Wenhua Liang (2022)
 \item Molly McQuoid (2022)
-
+\item Mark Taylor (2021 -- 2022)
+\item Francisca O. Fadairo (2023)
+\item Ameer Talha Yasser (2023)
 \end{list}
 \end{multicols}
 \end{fullwidth}
