adding name to lab manual

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1643,6 +1643,7 @@ feel you need access to RAPPORT then let \director~know.
 \item Grady Redding (2023 -- )
 \item DJ Matusz (2023 -- )
 \item Sarah Parigela (2023 -- )
+\item Jake McDermid (2023 -- ) 
 
 \end{list}
 \end{multicols}
